--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
